Integrated the view modes in the engine for memory reasons.